# PLYF_Reg

./: 99Botellas.pl  respaldo.txt
ConociendoProlog/: CartaRestaurante.pl  consultas.txt
EjerciciosHaskell/: Ej1.hs  Ej2.hs  Ej3.hs  Ej4.hs  Ej5.hs  Ej6.hs
EjerciciosHaskell0/: EjericiosHaskell0.hs
EjerciciosHaskell2/: Ejercicio1.hs  Ejercicio2.hs  Ejercicio3.hs  Ejercicio4.hs  Ejercicio5.hs
Evaluacion-unidad3/: Ejercicio 3.pl  Ejercicio1.pl  Ejercicio2.pl  Ejercicio2.pl~  Ejercicio4.pl
EvaluacionFizzBuzzPrimos/: TestingFizzBuzz.hs  fizzBuzzPrimos.hs  fizzbuzzDep.cabal
EvaluacionFizzBuzzPrimos/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
KataFizzBuzz/: fizzbuzz.hs
PrologEjercicios3/: ConsultaEnfermedades.txt  Enfermedades.pl  Horoscopos.pl  Viajes.pl  consultasHoroscopos.txt  consultasViajes.txt
