cabal-version:       >=1.10
name:                fizzbuzz
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable fizzbuzz
  main-is:             Main.hs
  -- Otros módulos necesarios
  build-depends:       base >= 4.7 && < 5
                     , HUnit
  default-language:    Haskell2010
